--- a/Geospecific LCI and mapping to GLAM and Impact World +.ipynb
+++ b/Geospecific LCI and mapping to GLAM and Impact World +.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "def select_activity(act_name, prod_name, location, unit):\n",
     "    act_list = [x for x in ecoinvent if act_name.lower() == x['name'].lower() and prod_name.lower() == x['reference product'].lower() and location.lower() == x['location'].lower() and unit.lower() == x['unit'].lower()]\n",
-    "    assert len(act_list)==1, 'There should be exactly one activity matching the criteria, the query found '+str(len(act_list))+' activities'\n",
+    "    assert len(act_list)==1, 'There should be exactly one activity matching the criteria, we found '+str(len(act_list))+': '+str(act_list)\n",
     "    return act_list[0]"
    ]
   },
@@ -141,8 +141,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "method=('IMPACT World+ v2.0.1, footprint version',  'ecosystem quality',  'remaining ecosystem quality damage')\n",
-    "# A more up to date version of IW+ could be downloaded. Also note that the footprint and expert versions are quite different! https://zenodo.org/records/14041258"
+    "method=('IMPACT World+ v2.1, footprint version',  'ecosystem quality',  'remaining ecosystem quality damage')\n",
+    "# Note that the footprint and expert versions are quite different! https://zenodo.org/records/14041258"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "source": [
     "def select_method(method):\n",
     "    method_list=[x for x in bd.methods if str(method) in str(x)]\n",
-    "    assert len(method_list)==1, 'There should be exactly one method matching the criteria'\n",
+    "    assert len(method_list)==1, 'There should be exactly one method matching the criteria, we found '+str(len(method_list))+': '+str(method_list)\n",
     "    return method_list[0]"
    ]
   },
